--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
   Updated: 05/01/2018
  */
 body{
+
+  background-image: url("rainbow.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #d9d9d9;
   font-family: Georgia, Arial, "Times New Roman";
   padding: 0;
@@ -48,5 +52,8 @@ img {
 }
 .center{
   margin: auto;
+  text-align: center;
+}
+footer{
   text-align: center;
 }
