--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #d9d9d9;
+
   font-family: Georgia, Arial, "Times New Roman";
+
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -22,6 +24,7 @@ body{
   margin:auto;
   max-width: 1000px;
   background-color: #cccccc;
+  
 }
 
 header {
@@ -40,7 +43,7 @@ img {
 }
 
 .bottom{
-  background-color: #ffccee;
+  background-color: #bfbfd9;
 	padding: 20px;
 	font-size: 13px;
 	margin: 0 0 15px 0;
