--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body{
   margin:auto;
   max-width: 1000px;
   background-color: #cccccc;
-  
+
 }
 
 header {
@@ -50,8 +50,8 @@ img {
   clear: both;
 }
 .navbar-default {
-    background-color: #d9d9d9;
-    border-color: #d9d9d9;
+    background-color: #E9E9E9;
+    border-color: #E9E9E9;
 }
 .center{
   margin: auto;
